--- a/css/tryswift.css
+++ b/css/tryswift.css
@@ -1,9 +1,12 @@
-#tutorial {
-  width: 40%;
+
+
+#wrapright {
+  /*width: 40%;*/
   margin-top: 0px;
   position: absolute;
   /*width: 20%;*/
   left: 55%;
+  margin-left: 1%;
   /*height: 100%;*/
 }
 
@@ -27,8 +30,8 @@ a:link {
 
 #workarea {
   width: 52%;
-  padding-left: 0px;
-  margin-top: 0px;
+  padding-left: 0;
+  margin-top: 0;
   /*margin-right: 51%;*/
   background: #f1f1f1;
   position: absolute;
@@ -65,6 +68,11 @@ a:link {
   background: #ffffff;
 }
 
+/*@media screen and (max-width: 1000px) {
+  #tutorial, #workarea {
+    width: 100%;
+  }
+}*/
 
 
 
