--- a/css/tryswift.css
+++ b/css/tryswift.css
@@ -14,6 +14,10 @@
   font-size: 14px;
 }
 
+.example.hidden {
+  display: none;
+}
+
 body {
   background-color: #ffffff;
 }
@@ -45,22 +49,31 @@ h1 {
   top: 0;
 }
 
-#workarea-middle {
+#workarea-bottom {
   top: 58%;
-  bottom: 38%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  /*border: 1px solid black;
+*/}
+
+#bottom-top {
+  top: 0;
+  height: 25px;
   left: 0;
   right: 0;
   position: absolute;
 }
 
-#workarea-bottom {
+/*#workarea-bottom {
   top: 62%;
   bottom: 0;
   left: 0;
   right: 0;
   position: absolute;
 }
-
+*/
 #editor {
   position: absolute;
   top: 20px;
@@ -74,7 +87,6 @@ h1 {
   position: absolute;
   top: 5px;
   left: 10px;
-  bottom: 5px;
 }
 
 #rightButtons {
@@ -83,14 +95,22 @@ h1 {
   right: 20px;
 }
 
+#bottom-bottom {
+  position: absolute;
+  top: 25px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+}
+
 #output {
   position: absolute;
   top: 6px;
   bottom: 20px;
   left: 10px;
   right: 20px;
-  border: 1px solid black;
   background: #ffffff;
+  border: 1px solid black;
 }
 
 
